fix: add overflow-y auto to .SiteInfoInnerPane to prevent the Live Links bar from being pushed down

--- a/src/components/SiteInfoInnerPane/SiteInfoInnerPane.sass
+++ b/src/components/SiteInfoInnerPane/SiteInfoInnerPane.sass
@@ -3,3 +3,4 @@
 .SiteInfoInnerPane
 	flex: 1
 	display: flex
+	overflow-y: auto
